# SumoArena

./: .gitignore  README.txt
SumoArenaGameEngine/: .actionScriptProperties  .fxpProperties  .project  README.txt
SumoArenaGameEngine/bin-debug/: SumoBotGameController-app.xml  SumoBotGameController.swf  notes.txt
SumoArenaGameEngine/libs/Stray-signals-extensions-CommandSignal-91f0841/: TEST-org.robotlegs.base.GuardedSignalCommandMapTests.xml  TEST-org.robotlegs.base.SignalCommandMapTests.xml  TEST-org.robotlegs.mvcs.SignalCommandTests.xml  TEST-org.robotlegs.mvcs.SignalContextTests.xml  TESTS-TestSuites.xml  build.properties
SumoArenaGameEngine/src/: SumoArenaGameEngine-app.xml  SumoArenaGameEngine.mxml  SumoBotGameController-app.xml  SumoBotGameController.mxml  SumoContext.as  notes.txt
SumoArenaGameEngine/src/controller/commands/: CancelGameCommand.as  CancelRoundCommand.as  CreateSphereCommand.as  DestroySphereCommand.as  LogCommand.as  RegisterPlayerCommand.as  SelectPlayerCommand.as  SetArenaInitialRadiusCommand.as  SetArenaInitialRadiusCommandToRemove.as  SetInitialDistanceCommand.as  SetShrinkingCommand.as  SetShrinkingIntervalCommand.as  SetShrinkingStartCommand.as  SetSpeedVariationCommand.as  SetSphereRadiusCommand.as  SetTurnDurationCommand.as  SetWinningRoundsCommand.as  StartGameCommand.as  StartRoundCommand.as  StartServerCommand.as  StopGameCommand.as  StopServerCommand.as  UnregisterPlayerCommand.as  UnselectPlayerCommand.as  UpdateCommand.as  UpdateSphereCommand.as
SumoArenaGameEngine/src/controller/signals/: CancelGameSignal.as  CancelRoundSignal.as  ChangeArenaRadiusSignal.as  ChangeInitialDistanceSignal.as  ChangeShrinkingIntervalSignal.as  ChangeShrinkingSignal.as  ChangeShrinkingStartSignal.as  ChangeSpeedVariationSignal.as  ChangeSphereRadiusSignal.as  ChangeTurnDurationSignal.as  ChangeWinningRoundsSignal.as  CreateSphereSignal.as  DestroySphereSignal.as  LogSignal.as  PauseSignal.as  PlaySignal.as  RegisterPlayerSignal.as  SelectPlayerSignal.as  StartRoundSignal.as  StartServerSignal.as  StartSignal.as  StopServerSignal.as  StopSignal.as  UnregisterPlayerSignal.as  UnselectPlayerSignal.as  UpdateSignal.as  UpdateSphereSignal.as
SumoArenaGameEngine/src/model/: ArenaModel.as  GameModel.as  LogModel.as  SphereConfigurationModel.as  SphereModel.as
SumoArenaGameEngine/src/model/vo/: Arena.as  Game.as  Player.as  Sphere.as  SphereConfiguration.as
SumoArenaGameEngine/src/org/swiftsuspenders/injectionpoints/: ConstructorInjectionPoint.as
SumoArenaGameEngine/src/service/: Server.as
SumoArenaGameEngine/src/view/components/: ArenaSkin.mxml  ArenaView.mxml  ConfigurationView.mxml  ControlView.mxml  GameView.mxml  HelpView.mxml  LogView.mxml  PlayerRenderer.mxml  PlayerView.mxml  ServerView.mxml  SphereRenderer.mxml  Title.mxml
SumoArenaGameEngine/src/view/mediators/: ApplicationMediator.as  ArenaViewMediator.as  ConfigurationViewMediator.as  ControlViewMediator.as  GameViewMediator.as  LogViewMediator.as  PlayerViewMediator.as  ServerViewMediator.as
SumoArenaSDK/: .project  README.txt
SumoArenaSDK/Clients/: .gitignore  README.txt  example_client_guidelines.txt
SumoArenaSDK/Clients/C#/: README.txt  SumoArena.csproj  SumoArenaClient.cs  SumoArenaClient.sln
SumoArenaSDK/Clients/C#/Properties/: AssemblyInfo.cs
SumoArenaSDK/Clients/Cpp/: CMakeLists.txt  README.txt
SumoArenaSDK/Clients/Cpp/Client/: CMakeLists.txt
SumoArenaSDK/Clients/Cpp/Client/inc/: ExampleClient.h  GameManager.h  IAlgoClient.h  Player.h  RoundInfo.h  TurnInfo.h
SumoArenaSDK/Clients/Cpp/Client/src/: CMakeLists.txt  ExampleClient.cpp  GameManager.cpp  Player.cpp  RoundInfo.cpp  TurnInfo.cpp
SumoArenaSDK/Clients/Cpp/inc/: ExampleClient.h  GameManager.h  IPlayer.h  PlayingInfo.h  RoundInfo.h  Sphere.h  TurnInfo.h
SumoArenaSDK/Clients/Cpp/src/: CMakeLists.txt  ExampleClient.cpp  GameManager.cpp  Player.cpp  PlayingInfo.cpp  RoundInfo.cpp  Sphere.cpp  TurnInfo.cpp  main.cpp
SumoArenaSDK/Clients/Flash/HumanSumoArenaClient/: .actionScriptProperties  .project
SumoArenaSDK/Clients/Flash/HumanSumoArenaClient/src/: HumanSumoArenaClient.mxml
SumoArenaSDK/Clients/Javascript/JSHumanClient/: HumanSumoClient.html
SumoArenaSDK/Clients/python/: .gitignore  README.txt  sumo_arena_client.py
SumoArenaSDK/GameEngine/: SumoArena.air  SumoArenaGameEngine.air
(+10 files in other folders)
